# synthetic

./: .buildinfo  .bumpversion.cfg  .codeclimate.yml  .pre-commit-config.yaml  .travis.yml  README.md  README.rst  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.in  requirements.txt  scripts.html  search.html  searchindex.js  setup.py  sitemap.xml  synthetic_evaluation.py  tox.ini  wercker.yml
.github/workflows/: python-lib.yaml
_modules/: index.html
_modules/synthetic/: loader.html
_sources/: index.rst.txt  index.txt
_sources/modules/: synthetic.rst.txt  synthetic.txt
_static/: basic.css  doctools.js  opensearch.xml  searchtools.js  websupport.js
_static/css/: theme.css
_static/js/: theme.js
docs/: Makefile
docs/source/: conf.py  index.rst  scripts.rst
docs/source/_templates/: layout.html
misc/: index.html
modules/: synthetic.html
synthetic/: __init__.py  __version__.py  loader.py
synthetic/eval/: __init__.py  __main__.py  cli.py  graph.py  score.py
tests/: __init__.py  graph.py  synthetic_test.py  test_graph.py  test_suite.py  test_synthetic.py
tests/eval/: __init__.py  test_cli.py  test_score.py
